force-app/main/default/objects/Stripe_Webhook_Log__c/Stripe_Webhook_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log of every inbound Stripe webhook event with signature-verification outcome. Idempotency keyed on the Stripe event id.</description>
    <label>Stripe Webhook Log</label>
    <nameField>
        <displayFormat>SP-WH-{000000}</displayFormat>
        <label>Webhook Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Webhook Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>