force-app/main/default/objects/Stripe_Webhook_Log__c/fields/Related_Payment__c.field-meta.xml
<CustomField>
    <fullName>Related_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Payment</label>
    <referenceTo>Stripe_Payment__c</referenceTo>
    <relationshipLabel>Stripe Webhook Logs</relationshipLabel>
    <relationshipName>Stripe_Webhook_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>