force-app/main/default/objects/Stripe_Webhook_Log__c/fields/Source_IP__c.field-meta.xml
<CustomField>
    <fullName>Source_IP__c</fullName>
    <label>Source IP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>