force-app/main/default/objects/Stripe_Webhook_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Processing_Status__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Related_Payment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>